docs/mobile-sdk-api/k8s/deployment-dev.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sdk-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdk-docs
  template:
    metadata:
      labels:
        app: sdk-docs
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sdk-docs
          image: waltid/waltid-sdk-docs:__DEFAULT_IMAGE_TAG__
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http-docs
---
kind: Service
apiVersion: v1
metadata:
  name: sdk-docs
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-docs
      protocol: TCP
  selector:
    app: sdk-docs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdk-docs-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - sdk-docs.test.waltid.cloud
        - ios-sdk-docs.test.waltid.cloud
      secretName: sdk-docs-tls-secret
  rules:
    - host: sdk-docs.test.waltid.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sdk-docs
                port:
                  name: http
    - host: ios-sdk-docs.test.waltid.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sdk-docs
                port:
                  name: http
